// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink change when isAuthenticated is true or false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    isAuthenticated={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="App-title"
>
          Welcome to React
</h1>,
        <Menu
          pointing={true}
>
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Home"
                    to="/"
          />
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Account"
                    to="/account"
          />
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Register"
                    to="/register"
          />
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Users"
                    to="/users"
          />
          <MenuMenu
                    position="right"
          >
                    <MenuItem
                              activeClassName="active"
                              as={[Function]}
                              exact={true}
                              name="Logout"
                              to="/logout"
                    />
          </MenuMenu>
</Menu>,
      ],
      "className": "App-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Welcome to React",
          "className": "App-title",
        },
        "ref": null,
        "rendered": "Welcome to React",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Home"
              to="/"
/>,
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Account"
              to="/account"
/>,
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Register"
              to="/register"
/>,
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Users"
              to="/users"
/>,
            <MenuMenu
              position="right"
>
              <MenuItem
                            activeClassName="active"
                            as={[Function]}
                            exact={true}
                            name="Logout"
                            to="/logout"
              />
</MenuMenu>,
          ],
          "pointing": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Home",
              "to": "/",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Account",
              "to": "/account",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Register",
              "to": "/register",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Users",
              "to": "/users",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Logout"
                to="/logout"
/>,
              "position": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Logout",
                "to": "/logout",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="App-title"
>
            Welcome to React
</h1>,
          <Menu
            pointing={true}
>
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Home"
                        to="/"
            />
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Account"
                        to="/account"
            />
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Register"
                        to="/register"
            />
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Users"
                        to="/users"
            />
            <MenuMenu
                        position="right"
            >
                        <MenuItem
                                    activeClassName="active"
                                    as={[Function]}
                                    exact={true}
                                    name="Logout"
                                    to="/logout"
                        />
            </MenuMenu>
</Menu>,
        ],
        "className": "App-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome to React",
            "className": "App-title",
          },
          "ref": null,
          "rendered": "Welcome to React",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Home"
                to="/"
/>,
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Account"
                to="/account"
/>,
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Register"
                to="/register"
/>,
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Users"
                to="/users"
/>,
              <MenuMenu
                position="right"
>
                <MenuItem
                                activeClassName="active"
                                as={[Function]}
                                exact={true}
                                name="Logout"
                                to="/logout"
                />
</MenuMenu>,
            ],
            "pointing": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Home",
                "to": "/",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Account",
                "to": "/account",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Register",
                "to": "/register",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Users",
                "to": "/users",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <MenuItem
                  activeClassName="active"
                  as={[Function]}
                  exact={true}
                  name="Logout"
                  to="/logout"
/>,
                "position": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeClassName": "active",
                  "as": [Function],
                  "exact": true,
                  "name": "Logout",
                  "to": "/logout",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NavLink change when isAuthenticated is true or false 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    isAuthenticated={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="App-title"
>
          Welcome to React
</h1>,
        <Menu
          pointing={true}
>
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Home"
                    to="/"
          />
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Account"
                    to="/account"
          />
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Register"
                    to="/register"
          />
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Users"
                    to="/users"
          />
          <MenuMenu
                    position="right"
          >
                    <MenuItem
                              activeClassName="active"
                              as={[Function]}
                              exact={true}
                              name="Login"
                              to="/login"
                    />
          </MenuMenu>
</Menu>,
      ],
      "className": "App-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Welcome to React",
          "className": "App-title",
        },
        "ref": null,
        "rendered": "Welcome to React",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Home"
              to="/"
/>,
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Account"
              to="/account"
/>,
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Register"
              to="/register"
/>,
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Users"
              to="/users"
/>,
            <MenuMenu
              position="right"
>
              <MenuItem
                            activeClassName="active"
                            as={[Function]}
                            exact={true}
                            name="Login"
                            to="/login"
              />
</MenuMenu>,
          ],
          "pointing": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Home",
              "to": "/",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Account",
              "to": "/account",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Register",
              "to": "/register",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Users",
              "to": "/users",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Login"
                to="/login"
/>,
              "position": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Login",
                "to": "/login",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="App-title"
>
            Welcome to React
</h1>,
          <Menu
            pointing={true}
>
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Home"
                        to="/"
            />
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Account"
                        to="/account"
            />
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Register"
                        to="/register"
            />
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Users"
                        to="/users"
            />
            <MenuMenu
                        position="right"
            >
                        <MenuItem
                                    activeClassName="active"
                                    as={[Function]}
                                    exact={true}
                                    name="Login"
                                    to="/login"
                        />
            </MenuMenu>
</Menu>,
        ],
        "className": "App-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome to React",
            "className": "App-title",
          },
          "ref": null,
          "rendered": "Welcome to React",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Home"
                to="/"
/>,
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Account"
                to="/account"
/>,
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Register"
                to="/register"
/>,
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Users"
                to="/users"
/>,
              <MenuMenu
                position="right"
>
                <MenuItem
                                activeClassName="active"
                                as={[Function]}
                                exact={true}
                                name="Login"
                                to="/login"
                />
</MenuMenu>,
            ],
            "pointing": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Home",
                "to": "/",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Account",
                "to": "/account",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Register",
                "to": "/register",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Users",
                "to": "/users",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <MenuItem
                  activeClassName="active"
                  as={[Function]}
                  exact={true}
                  name="Login"
                  to="/login"
/>,
                "position": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeClassName": "active",
                  "as": [Function],
                  "exact": true,
                  "name": "Login",
                  "to": "/login",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
